--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: SIVCMTest
 Type: Package
-Title: Model Checks on Single-index Varying Coefficient Models with Functional Response
+Title: Model Checks on Single-index Varying Coefficient Models with
+        Functional Response
 Version: 1.0
 Date: 2021-10-02
 Author: Qing Jiang
@@ -10,3 +11,5 @@ License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.6), MASS, stats, nleqslv
 LinkingTo: Rcpp, RcppEigen
 RoxygenNote: 7.1.1
+NeedsCompilation: yes
+Packaged: 2021-10-02 06:38:17 UTC; lou
